--- a/src/components/icons/UofTLogo.astro
+++ b/src/components/icons/UofTLogo.astro
@@ -1,14 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN"
-              "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
-
-<svg xmlns="http://www.w3.org/2000/svg"
-     width="3.34444in" height="7.18889in"
-     fill="white"
-     viewBox="0 0 301 647">
-  <path id="Selection"
-        stroke="black" stroke-width="1"
-        d="M 122.00,29.00
+<svg xmlns="http://www.w3.org/2000/svg" width="3.34444in" height="7.18889in" viewBox="0 0 301 647" {...Astro.props}>
+	<path
+		id="Selection"
+		fill="currentColor"
+		stroke="currentColor"
+		stroke-width="1"
+		d="M 122.00,29.00
            C 121.54,27.65 121.02,26.45 120.88,25.00
              119.92,15.62 128.84,20.14 133.00,22.05
              133.00,22.05 137.73,24.00 137.73,24.00
@@ -1354,5 +1350,6 @@
              114.05,602.69 113.55,602.10 113.00,599.00 Z
            M 148.00,609.00
            C 152.81,607.33 152.54,604.83 148.00,603.00
-             148.00,603.00 148.00,609.00 148.00,609.00 Z" />
+             148.00,603.00 148.00,609.00 148.00,609.00 Z"
+	></path>
 </svg>
