--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,209 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import { Image } from 'astro:assets'
+import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
+import BaseLayout from '../layouts/BaseLayout.astro'
+import { Icon } from 'astro-icon/components'
+
+import FoM_Sky from '../assets/FoM_Sky.png'
+import DataDriven from '../assets/DataDriven.jpg'
+import SavingsPolicy from '../assets/SavingsPolicy.png'
+import HelpingStudents from '../assets/HelpingStudents.png'
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+<BaseLayout title={SITE_TITLE} description={SITE_DESCRIPTION}>
+	<main class="text-justify">
+		<!-- Main Hero -->
+		<section class="fade-in-section relative h-[50vh] min-h-[300px] w-full">
+			<div class="absolute inset-0 bg-black/50 backdrop-blur-sm"></div>
+			<div class="relative h-full w-full">
+				<Image
+					src={FoM_Sky}
+					alt="FoM_Sky"
+					class="fade-in-image h-full w-full object-cover brightness-50"
+					width={1920}
+					height={1080}
+				/>
+			</div>
+			<div class="fade-in-text absolute inset-0 flex flex-col items-center justify-center">
+				<p class="text-center text-xl font-bold text-white md:text-3xl">We are your</p>
+				<h1 class="text-center text-5xl font-bold text-white md:text-6xl lg:text-7xl">
+					Graduate Representation Committee
+				</h1>
+			</div>
+		</section>
+
+		<!-- Data-Driven Section -->
+		<section class="fade-in-section relative flex min-h-[30rem] w-full items-center bg-gray-800 py-20">
+			<div class="container mx-auto px-4">
+				<div class="flex flex-col items-center gap-8 md:flex-row">
+					<div class="fade-in-text prose md:w-1/2">
+						<h2 class="text-4xl font-bold text-white md:text-5xl lg:text-6xl">Data-Driven</h2>
+						<p class="text-md mt-4 leading-relaxed text-gray-200 md:text-lg lg:text-xl">
+							We turn your voice into data-driven insights to <strong class="text-white">advocate</strong> for your needs
+							and enhancing your graduate experience.
+						</p>
+					</div>
+					<div class="fade-in-image md:w-1/2">
+						<Image
+							src={DataDriven}
+							alt="Data-Driven Insights"
+							width={500}
+							height={300}
+							class="h-auto w-full rounded-lg shadow-md"
+						/>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Accomplishments Section -->
+		<section class="fade-in-section relative flex min-h-[30rem] w-full items-center bg-slate-100 py-20">
+			<div class="container mx-auto px-4">
+				<div class="flex flex-col items-center gap-8 py-12 md:flex-row">
+					<div class="fade-in-image md:w-1/2">
+						<Image
+							src={SavingsPolicy}
+							alt="Data-Driven Insights"
+							width={500}
+							height={300}
+							class="h-auto w-full rounded-lg"
+						/>
+					</div>
+					<div class="fade-in-text prose md:w-1/2">
+						<h2 class="text-4xl font-bold md:text-5xl lg:text-6xl">More For You</h2>
+						<p class="text-md mt-4 leading-relaxed text-gray-700 md:text-lg lg:text-xl">
+							Our efforts over the past 8 years have resulted in over <strong
+								class="bg-gradient-to-t from-slate-600 to-green-700 bg-clip-text text-4xl font-bold leading-relaxed text-transparent"
+								>$1,000,000</strong
+							>
+							in savings for the graduate student body.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Student-Centric Section -->
+		<section class="fade-in-section relative flex min-h-[30rem] w-full items-center bg-slate-800 py-20">
+			<div class="container mx-auto px-4">
+				<div class="flex flex-col items-center gap-8 md:flex-row">
+					<div class="fade-in-text prose md:w-1/2">
+						<h2 class="text-4xl font-bold text-white md:text-5xl lg:text-6xl">Student-Centric</h2>
+						<p class="text-md mt-4 leading-relaxed text-gray-200 md:text-lg lg:text-xl">
+							Not all who wander are lost. We are here to help you find your way.
+						</p>
+						<p class="text-md mt-4 leading-relaxed text-gray-200 md:text-lg lg:text-xl">
+							We regularly post information about events, resources, and opportunities for graduate students. Check out
+							our <a href="/blog" class="text-lg font-bold text-blue-500">blog</a> as well as our <a
+								href="/resources"
+								class="text-lg font-bold text-blue-500">resources</a
+							> pages for more information.
+						</p>
+					</div>
+					<div class="fade-in-image md:w-1/2">
+						<Image
+							src={HelpingStudents}
+							alt="Helping Students"
+							width={500}
+							height={300}
+							class="h-auto w-full rounded-lg shadow-md"
+						/>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Contact Section -->
+		<section class="fade-in-section relative flex min-h-[30rem] w-full flex-col items-center bg-gray-100 py-20">
+			<div class="container mx-auto px-4">
+				<div class="fade-in-text flex flex-col items-center gap-8">
+					<h2 class="text-4xl font-bold md:text-5xl lg:text-6xl">Contact Us</h2>
+					<p class="text-md mt-4 leading-relaxed text-gray-700 md:text-lg lg:text-xl">
+						Have questions or feedback? We'd love to hear from you!
+					</p>
+				</div>
+				<!-- Contact Info -->
+				<div class="mt-12 flex flex-col items-center gap-8">
+					<div class="flex items-center gap-4">
+						<Icon name="mdi:email" class="h-12 w-12 text-slate-700" />
+						<div>
+							<h3 class="text-2xl font-bold">Email</h3>
+							<a href="mailto:fomgrc@utoronto.onmicrosoft.com" class="text-lg text-blue-500"
+								>fomgrc@utoronto.onmicrosoft.com</a
+							>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
-</Layout>
+	<script>
+		const handleIntersection: IntersectionObserverCallback = (entries, observer) => {
+			entries.forEach((entry) => {
+				if (entry.isIntersecting) {
+					console.log('is intersecting')
+					entry.target.classList.add('visible')
+					observer.unobserve(entry.target)
+				}
+			})
+		}
+
+		const options = {
+			root: null,
+			rootMargin: '0px 0px -50px 0px',
+			threshold: 0.4
+		}
+
+		const observer = new IntersectionObserver(handleIntersection, options)
+
+		const setUpIntersectionObserver = () => {
+			const sections = document.querySelectorAll('.fade-in-section')
+			sections.forEach((section) => {
+				const image = section.querySelector('.fade-in-image')!
+				const text = section.querySelector('.fade-in-text')!
+				if (image) observer.observe(image)
+				if (text) observer.observe(text)
+			})
+		}
+
+		document.addEventListener('astro:page-load', () => {
+			console.log('page loaded')
+			setUpIntersectionObserver()
+		})
+
+		document.addEventListener('DOMContentLoaded', () => {
+			console.log('DOMContentLoaded')
+			setUpIntersectionObserver()
+		})
+	</script>
+</BaseLayout>
 
 <style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
+	.fade-in-section {
+		opacity: 1;
+		transition:
+			opacity 0.5s ease-out,
+			transform 0.5s ease-out;
 	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
+
+	.fade-in-image,
+	.fade-in-text {
+		opacity: 0;
+		transform: translateY(20px);
+		transition-delay: 0.5s;
+		transition:
+			opacity 0.5s ease-out,
+			transform 0.5s ease-out;
 	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
+
+	.fade-in-image.visible {
+		opacity: 1;
+		transform: translateY(0);
 	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
+
+	.fade-in-text.visible {
+		opacity: 1;
+		transform: translateY(0);
+		transition-delay: 0.2s;
 	}
 </style>
