fix: :bug: Fixed a type issue with about.astro page
Prevented the deployment site from working due to a type error.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,6 +8,7 @@ import GRC_Hero from '../assets/GRC_Hero.png'
 	description="Lorem ipsum dolor sit amet"
 	pubDate={new Date('September 1, 2024')}
 	heroImage={GRC_Hero.src}
+	tags={[]}
 >
 	<section id="about">
 		<p>
