feat: :rocket: Added seed blog posts and refactored schemas
Blog and tag schemas are now in their own module. Starter blog posts added.

--- a/src/components/TagBadge.astro
+++ b/src/components/TagBadge.astro
@@ -1,6 +1,6 @@
 ---
-import { prettifyTag } from '../consts'
-import type { BlogTag } from '../consts'
+import { prettifyTag } from '../utils/strings'
+import type { BlogTag } from '../schemas'
 
 interface Props {
 	tag: BlogTag
