--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -19,7 +19,7 @@ const { post } = Astro.props as { post: CollectionEntry<'blog'> }
 		<Image
 			width={720}
 			height={360}
-			src={post.data.heroImage || '/uoft-placeholder-default.jpg'}
+			src={post.data.heroImage || '/uoft-placeholder-default.webp'}
 			alt={post.data.title}
 			class="aspect-video min-h-[18rem] w-full object-cover object-center"
 		/>
