--- a/src/pages/resources/index.astro
+++ b/src/pages/resources/index.astro
@@ -1,7 +1,8 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro'
 import { Image } from 'astro:assets'
-import { BLOG_TAGS, prettifyTag } from '../../consts'
+import { BLOG_TAGS } from '../../consts'
+import { prettifyTag } from '../../utils/strings'
 ---
 
 <BaseLayout>
