refactor: :recycle: Changed financial-ed to continuing-ed and added initial team member profile pics
Changed the financial-education tag to be continuing education. Added the other tag and corresponding resource page. Refactored some resource pages to no longer have redundant paragraphs. Added some team members' profile pics the the team section in about. Significantly improved ARIA labeling in the website.

--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -10,6 +10,12 @@ const subpath = pathname.match(/[^\/]+/g)
 const isActive = href === pathname || href === '/' + subpath?.[0]
 ---
 
-<a href={href} class:list={[className, { 'font-bold underline': isActive }]} {...props}>
+<a
+	href={href}
+	class:list={[className, { 'font-bold underline': isActive }]}
+	{...props}
+	aria-current={isActive ? 'page' : undefined}
+	aria-label={props['aria-label'] || 'Go to ' + href}
+>
 	<slot />
 </a>
