--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import HelpingStudents from '../assets/HelpingStudents.png'
 			<div class="relative h-full w-full">
 				<Image
 					src={FoM_Sky}
-					alt="FoM_Sky"
+					alt="Aerial view of University of Toronto Faculty of Medicine buildings"
 					class="fade-in-image h-full w-full object-cover brightness-50"
 					width={1920}
 					height={1080}
@@ -46,7 +46,7 @@ import HelpingStudents from '../assets/HelpingStudents.png'
 					<div class="fade-in-image md:w-1/2">
 						<Image
 							src={DataDriven}
-							alt="Data-Driven Insights"
+							alt="Illustration representing data-driven insights"
 							width={500}
 							height={300}
 							class="h-auto w-full rounded-lg shadow-md"
