--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -6,23 +6,38 @@ import FormattedDate from './FormattedDate.astro'
 import type { CollectionEntry } from 'astro:content'
 
 const { post } = Astro.props as { post: CollectionEntry<'blog'> }
+
+// Netlify has issues with the heroImage if it is a https url
+const heroImageIsExternal = post.data.heroImage?.startsWith('https://') || post.data.heroImage?.startsWith('http://')
 ---
 
 <li
-	class="card overflow-hidden rounded-lg bg-white shadow-md duration-300 focus-within:ring-2 focus-within:ring-blue-500 hover:-translate-y-1"
+	class="card flex flex-col overflow-hidden rounded-lg bg-white shadow-md duration-300 focus-within:ring-2 focus-within:ring-blue-500 hover:-translate-y-1 hover:shadow-lg"
 >
 	<a
 		href={`/blog/${post.slug}/`}
 		class="focus-visible:ring-3 block focus:outline-none focus-visible:ring-blue-500 focus-visible:ring-offset-2"
 		aria-labelledby={`post-title-${post.slug}`}
 	>
-		<Image
-			width={720}
-			height={360}
-			src={post.data.heroImage || '/uoft-placeholder-default.webp'}
-			alt={post.data.title}
-			class="aspect-video min-h-[18rem] w-full object-cover object-center"
-		/>
+		{
+			heroImageIsExternal ? (
+				<img
+					width={720}
+					height={360}
+					src={post.data.heroImage || '/uoft-placeholder-default.webp'}
+					alt={post.data.title}
+					class="aspect-video min-h-[18rem] w-full object-cover object-center"
+				/>
+			) : (
+				<Image
+					width={720}
+					height={360}
+					src={post.data.heroImage || '/uoft-placeholder-default.webp'}
+					alt={post.data.title}
+					class="aspect-video min-h-[18rem] w-full object-cover object-center"
+				/>
+			)
+		}
 		<div class="p-4">
 			<h4 id={`post-title-${post.slug}`} class="mb-2 text-xl font-bold">
 				{post.data.title}
@@ -32,7 +47,7 @@ const { post } = Astro.props as { post: CollectionEntry<'blog'> }
 			</p>
 		</div>
 	</a>
-	<div class="flex flex-wrap gap-2 p-4">
+	<div class="flex flex-wrap justify-start gap-2 border-t-2 p-4">
 		{post.data.tags.map((tag) => <TagBadge tag={tag} />)}
 	</div>
 </li>
