--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,50 +1,82 @@
 ---
-import BlogPostLayout from '../layouts/BlogPostLayout.astro'
+import { Image } from 'astro:assets'
 import GRC_Hero from '../assets/GRC_Hero.png'
+import BaseLayout from '../layouts/BaseLayout.astro'
+import Accordion, { type ProfileAccordionItem } from '../components/ProfileAccordion.astro'
+
+const teamData: ProfileAccordionItem[] = [
+	// ... other years and profiles
+	{
+		year: '2024 - 2025',
+		profiles: [
+			{ name: 'Maurice Pasternak', position: 'Director and Web Developer', hasImage: true },
+			{ name: 'Willow Squires', position: 'Director', hasImage: false },
+			{ name: 'Saya Seddighi', position: 'Communications Director', hasImage: false },
+			{ name: 'Amy Wilson', position: 'Communications Director', hasImage: true },
+			{ name: 'Jinny Tsang', position: 'Data Analyst', hasImage: true },
+			{ name: 'Salman Basrai', position: 'Data Analyst', hasImage: false },
+			{ name: 'Jennifer Onuora', position: 'Data Analyst', hasImage: false },
+			{ name: 'Ali Chegini', position: 'Designer', hasImage: false }
+			// ... other profiles
+		]
+	}
+]
 ---
 
-<BlogPostLayout
+<BaseLayout
 	title="About the GRC"
-	description="Lorem ipsum dolor sit amet"
-	pubDate={new Date('September 1, 2024')}
-	heroImage={GRC_Hero.src}
-	tags={[]}
+	description="The Graduate Representation Committee (GRC) is a group of graduate students who represent the interests of all graduate students in the University of Toronto Faculty of Medicine. We support and advocate for graduate students, keep them informed about important policies, and actively seek their feedback to ensure our advocacy aligns with their needs."
 >
-	<section id="about">
-		<p>
-			<strong>Welcome</strong> to the Faculty of Medicine Graduate Representation Committee (GRC)! We are here to support
-			and advocate for the graduate students of the Faculty of Medicine.
-		</p>
-
-		<h2>Our Purpose and Objectives</h2>
-		<p>
-			The GRC is dedicated to keeping you informed about important faculty and university policies that affect your
-			graduate experience. We actively seek your feedback to ensure our advocacy aligns with your needs and sentiments.
-		</p>
-
-		<p>Through our initiatives, we aim to ensure that you:</p>
-		<ul>
-			<li>Are well-informed about policies and resources impacting your graduate life.</li>
-			<li>Feel heard and know that your opinions contribute to improving our graduate community.</li>
-			<li>Experience positive changes through our advocacy and policy efforts.</li>
-		</ul>
-
-		<h2>Our Work</h2>
-		<p>
-			The GRC primarily focuses on student stipends and the Faculty of Medicine Harmonized Base Funding Agreement
-			(HBFA). Each year, we conduct the "GRC Finance and Living Survey" to gather data on your finances, living
-			conditions, career prospects, and well-being. This data, combined with Statistics Canada metrics on Toronto's cost
-			of living, helps us create the "GRC Finance and Living Report". This report highlights the realities of graduate
-			student life and includes our recommendations for HBFA changes.
-		</p>
-
-		<h2>Get Involved</h2>
-		<p>
-			We encourage you to bring any issues related to student life, finances, or your graduate experience to the GRC.
-			Whether you're a student or a GRC member, your input is invaluable in helping us advocate effectively on your
-			behalf.
-		</p>
-
-		<p>Join us in making a difference in our graduate community!</p>
-	</section>
-</BlogPostLayout>
+	<main>
+		<!-- Hero Header Card -->
+		<section id="about-hero" class="hero">
+			<div class="hero_container flex w-full flex-col items-center justify-center">
+				<!-- Hero Image should be adjusted for multiple screen sizes -->
+				<Image src={GRC_Hero} alt="GRC_Hero" width={1920} height={1080} class="hero_image" />
+			</div>
+			<div class="hero_content container prose mx-auto max-w-[120ch] p-4 md:prose-lg">
+				<h1 class="hero_title my-4 text-center text-5xl font-bold">About the GRC</h1>
+				<p class="hero_description lead text-justify">
+					The Graduate Representation Committee (GRC) is a group of graduate students who represent the interests of all
+					graduate students in the University of Toronto Faculty of Medicine.
+				</p>
+			</div>
+		</section>
+		<section
+			id="about-content"
+			class="fade-in-section container prose mx-auto max-w-[120ch] px-4 py-8 md:prose-lg"
+		>
+			<h2 class="text-center font-bold">Our Purpose and Objectives</h2>
+			<p class="text-justify">
+				The GRC is dedicated to keeping you informed about important faculty and university policies that affect your
+				graduate experience. We actively seek your feedback to ensure our advocacy aligns with your needs and
+				sentiments.
+			</p>
+			<p class="text-justify">Through our initiatives, we aim to ensure that you:</p>
+			<ul>
+				<li>Are well-informed about policies and resources impacting your graduate life.</li>
+				<li>Feel heard and know that your opinions contribute to improving our graduate community.</li>
+				<li>Experience positive changes through our advocacy and policy efforts.</li>
+			</ul>
+			<h2 class="text-center font-bold">Our Work</h2>
+			<p class="text-justify">
+				The GRC primarily focuses on student stipends and the Faculty of Medicine Harmonized Base Funding Agreement
+				(HBFA). Each year, we conduct the "GRC Finance and Living Survey" to gather data on your finances, living
+				conditions, career prospects, and well-being. This data, combined with Statistics Canada metrics on Toronto's
+				cost of living, helps us create the "GRC Finance and Living Report". This report highlights the realities of
+				graduate student life and includes our recommendations for HBFA changes.
+			</p>
+			<h2 class="text-center font-bold">Get Involved</h2>
+			<p class="text-justify">
+				We encourage you to bring any issues related to student life, finances, or your graduate experience to the GRC.
+				Whether you're a student or a GRC member, your input is invaluable in helping us advocate effectively on your
+				behalf.
+			</p>
+			<p>Join us in making a difference in our graduate community!</p>
+		</section>
+		<section id="about-team" class="container mx-auto">
+			<h2 class="my-4 text-center text-5xl font-bold">Our Team</h2>
+			{teamData.map((yearItem) => <Accordion item={yearItem} />)}
+		</section>
+	</main>
+</BaseLayout>
