refactor: :art: Added remaining 2024 team members profile pictures

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,13 +10,13 @@ const teamData: ProfileAccordionItem[] = [
 		year: '2024 - 2025',
 		profiles: [
 			{ name: 'Maurice Pasternak', position: 'Director and Web Developer', hasImage: true },
-			{ name: 'Willow Squires', position: 'Director', hasImage: false },
-			{ name: 'Saya Seddighi', position: 'Communications Director', hasImage: false },
+			{ name: 'Willow Squires', position: 'Director', hasImage: true },
+			{ name: 'Saya Sedighi', position: 'Communications Director', hasImage: true },
 			{ name: 'Amy Wilson', position: 'Communications Director', hasImage: true },
 			{ name: 'Jinny Tsang', position: 'Data Analyst', hasImage: true },
 			{ name: 'Salman Basrai', position: 'Data Analyst', hasImage: false },
-			{ name: 'Jennifer Onuora', position: 'Data Analyst', hasImage: false },
-			{ name: 'Ali Chegini', position: 'Designer', hasImage: false }
+			{ name: 'Jennifer C. Onuora', position: 'Data Analyst', hasImage: true },
+			{ name: 'Ali Chegini', position: 'Data Analyst & Designer', hasImage: true }
 			// ... other profiles
 		]
 	}
