--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,7 +11,6 @@ const teamData: ProfileAccordionItem[] = [
 		profiles: [
 			{ name: 'Maurice Pasternak', position: 'Director and Web Developer', hasImage: true },
 			{ name: 'Willow Squires', position: 'Director', hasImage: true },
-			{ name: 'Saya Sedighi', position: 'Communications Director', hasImage: true },
 			{ name: 'Amy Wilson', position: 'Communications Director', hasImage: true },
 			{ name: 'Jinny Tsang', position: 'Data Analyst', hasImage: true },
 			{ name: 'Salman Basrai', position: 'Data Analyst', hasImage: false },
@@ -42,10 +41,7 @@ const teamData: ProfileAccordionItem[] = [
 				</p>
 			</div>
 		</section>
-		<section
-			id="about-content"
-			class="fade-in-section container prose mx-auto max-w-[120ch] px-4 py-8 md:prose-lg"
-		>
+		<section id="about-content" class="fade-in-section container prose mx-auto max-w-[120ch] px-4 py-8 md:prose-lg">
 			<h2 class="text-center font-bold">Our Purpose and Objectives</h2>
 			<p class="text-justify">
 				The GRC is dedicated to keeping you informed about important faculty and university policies that affect your
