--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,11 +24,14 @@ import HelpingStudents from '../assets/HelpingStudents.png'
 					height={1080}
 				/>
 			</div>
-			<div class="fade-in-text absolute inset-0 flex flex-col items-center justify-center">
+			<div class="fade-in-text absolute inset-0 flex flex-col items-center justify-center space-y-4">
 				<p class="text-center text-xl font-bold text-white md:text-3xl">We are your</p>
 				<h1 class="text-center text-5xl font-bold text-white md:text-6xl lg:text-7xl">
 					Graduate Representation Committee
 				</h1>
+				<p class="text-center text-xl font-bold text-white md:text-3xl">at the</p>
+				<p class="text-center text-xl font-bold text-white md:text-3xl">Faculty of Medicine</p>
+				<p class="text-center text-xl font-bold text-white md:text-3xl">University of Toronto</p>
 			</div>
 		</section>
 
@@ -128,9 +131,7 @@ import HelpingStudents from '../assets/HelpingStudents.png'
 						<Icon name="mdi:email" class="h-12 w-12 text-slate-700" />
 						<div>
 							<h3 class="text-2xl font-bold">Email</h3>
-							<a href="mailto:fomgrc@utoronto.onmicrosoft.com" class="text-lg text-blue-500"
-								>fomgrc@utoronto.onmicrosoft.com</a
-							>
+							<a href="mailto:grc.facmed@utoronto.ca" class="text-lg text-blue-500">grc.facmed@utoronto.ca</a>
 						</div>
 					</div>
 				</div>
