--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,8 @@
 ---
 import HeaderLink from './HeaderLink.astro'
-import UofTLogo from './icons/UofTLogo.astro'
 import { Icon } from 'astro-icon/components'
+import { Image } from 'astro:assets'
+import GRCLogo from '../assets/GRC_Logo.png'
 ---
 
 <header x-data="{ isOpen: false, isResourcesOpen: false }" class="sticky top-0 z-50 bg-white shadow-md">
@@ -9,7 +10,8 @@ import { Icon } from 'astro-icon/components'
 		<div class="flex items-center gap-2">
 			<div class="logo">
 				<a href="/" aria-label="Go to UofT FoM GRC homepage">
-					<UofTLogo class="h-12 w-12 text-slate-700" />
+					<!-- <UofTLogo class="h-12 w-12 text-slate-700" /> -->
+					<Image src={GRCLogo} alt="UofT FoM GRC logo" class="h-12 w-12" />
 				</a>
 			</div>
 			<h2 class="text-2xl font-bold text-slate-700"><a href="/">UofT FoM GRC</a></h2>
